--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ docs/
 /exp3/nbproject/private/
 /exp4/nbproject/private/
 /exp5/nbproject/private/
+/JavaApplication12/nbproject/private/
+/exp6/nbproject/private/
