--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ docs/
 /exp5/nbproject/private/
 /JavaApplication12/nbproject/private/
 /exp6/nbproject/private/
+/exp7/nbproject/private/
+/exp8/nbproject/private/
+/exp9/nbproject/private/
+/exp10/nbproject/private/
