--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ build.xml
 manifest.mf
 record/misc
 record/others
+/mavenproject1/target/
+/exp99/swing/build/
+/exp97/swing/build/
+/exp96/Swing/build/
+/exp97/President/build/
+/exp96/saruvedz/build/
